# QuarkPlayer

./: AUTHORS  CMakeLists-CoverageScanner.txt  CMakeLists-CoverageScannerFlags.txt  CMakeLists-linux.txt  CMakeLists-macos.txt  CMakeLists-owbuild.txt  CMakeLists-win32.txt  CMakeLists.txt  CPackConfig.txt  Doxyfile  Makefile  Options.cmake  README  README.md  THANKS  TODO  quarkplayer.desktop  quarkplayer.spec
libs/ContentFetcher/: AmazonCoverArt.cpp  AmazonCoverArt.h  CMakeLists.txt  ContentFetcher.cpp  ContentFetcher.h  ContentFetcherExport.h  ContentFetcherLogger.h  LyricsFetcher.cpp  LyricsFetcher.h  WikipediaArticle.cpp  WikipediaArticle.h
libs/Logger/: CMakeLists.txt  ConsoleOutput.cpp  ConsoleOutput.h  LogMessage.cpp  LogMessage.h  LogMessageHandler.cpp  LogMessageHandler.h  LogModel.cpp  LogModel.h  LogWindow.cpp  LogWindow.h  Logger.cpp  Logger.h  LoggerExport.h  LoggerLogger.h  LoggerOutput.cpp  LoggerOutput.h  XmlFileOutput.cpp  XmlFileOutput.h
libs/MediaInfoWindow/: CMakeLists.txt  MediaInfoWidget.cpp  MediaInfoWidget.h  MediaInfoWindow.cpp  MediaInfoWindow.h  MediaInfoWindow.ui  MediaInfoWindowExport.h  MediaInfoWindowLogger.h
libs/PlaylistParser/: ASXParser.cpp  ASXParser.h  CMakeLists.txt  CUEParser.cpp  CUEParser.h  IPlaylistParser.cpp  IPlaylistParser.h  IPlaylistParserImpl.cpp  IPlaylistParserImpl.h  M3UParser.cpp  M3UParser.h  PLSParser.cpp  PLSParser.h  PlaylistParser.cpp  PlaylistParser.h  PlaylistParserExport.h  PlaylistParserLogger.h  Util.cpp  Util.h  WPLParser.cpp  WPLParser.h  XSPFParser.cpp  XSPFParser.h
libs/ThumbnailView/: CMakeLists.txt  ThumbnailDirModel.cpp  ThumbnailDirModel.h  ThumbnailListView.cpp  ThumbnailListView.h  ThumbnailManager.cpp  ThumbnailManager.h  ThumbnailView.cpp  ThumbnailView.h  ThumbnailViewExport.h  ThumbnailViewLogger.h
libs/TkUtil/: ActionCollection.cpp  ActionCollection.h  Actions.cpp  Actions.h  CMakeLists.txt  CloseEventFilter.cpp  CloseEventFilter.h  DesktopEnvironment.cpp  DesktopEnvironment.h  DropEventFilter.cpp  DropEventFilter.h  EventFilter.cpp  EventFilter.h  FileChooserWidget.cpp  FileChooserWidget.h  FindFiles.cpp  FindFiles.h  KeyEventFilter.cpp  KeyEventFilter.h  LanguageChangeEventFilter.cpp  LanguageChangeEventFilter.h  LineEdit.cpp  LineEdit.h  LineEdit_p.h  MouseEventFilter.cpp  MouseEventFilter.h  Random.cpp  Random.h  ScreenSaver.cpp  ScreenSaver.h  SearchLineEdit.cpp  SearchLineEdit.h  Singleton.h  SqueezeLabel.cpp  SqueezeLabel.h  TkAction.cpp  TkAction.h  TkComboBox.cpp  TkComboBox.h  (+23 more)
phonon/: CMakeLists.txt  abstractaudiooutput.h  addoninterface.h  audiooutput.cpp  cmakelist.patch  factory.cpp  factory_p.h  globalstatic_p.h  mediacontroller.cpp  mediacontroller.h  mediaobject.cpp  mediaobject.h  objectdescription.h  path.cpp  path.h  path_source_sink_node.diff  phonon.pro  phononbackend.desktop  seekslider.cpp  seekslider.h  sliders_icon.diff  videoplayer.cpp  videoplayer.h  videowidget.cpp  volumeslider.cpp  volumeslider.h  volumeslider_p.h
phonon-mediaplayer/: CMakeLists.txt  README
phonon-mplayer/: AudioOutput.cpp  AudioOutput.h  Backend.cpp  Backend.h  CMakeLists.txt  Effect.cpp  Effect.h  EffectManager.cpp  EffectManager.h  MPlayerMediaController.cpp  MPlayerMediaController.h  MPlayerMediaObject.cpp  MPlayerMediaObject.h  MPlayerVideoWidget.cpp  MPlayerVideoWidget.h  MediaController.cpp  MediaController.h  MediaObject.cpp  MediaObject.h  README  SeekStack.cpp  SeekStack.h  SinkNode.cpp  SinkNode.h  VideoWidget.cpp  VideoWidget.h  WidgetNoPaintEvent.cpp  WidgetNoPaintEvent.h  audiooutput.cpp  audiooutput.h  backend.cpp  backend.h  config.h.in  mediaobject.cpp  mediaobject.h  phonon_mplayer.pro  videowidget.cpp  videowidget.h
phonon-multiplevideoplayer/: CMakeLists.txt  MainWindow.h  VideoWindow.cpp  VideoWindow.h  main.cpp
phonon-vlc/: AudioOutput.cpp  AudioOutput.h  Backend.cpp  Backend.h  CMakeLists.txt  MediaObject.cpp  MediaObject.h  README  VLCMediaObject.cpp  VLCMediaObject.h  VideoWidget.cpp  VideoWidget.h  audiooutput.cpp  backend.cpp  libloader.cpp  libloader.h  mediaobject.cpp  videowidget.cpp  vlc_loader.cpp  vlc_loader.h  vlc_symbols.cpp  vlc_symbols.h  vlcloader.cpp  vlcloader.h  vlcmediaobject.cpp  vlcmediaobject.h
phonon-vlc-mplayer/: AudioOutput.cpp  AudioOutput.h  Backend.cpp  Backend.h  CMakeLists.txt  Effect.cpp  Effect.h  EffectManager.cpp  MediaController.cpp  MediaController.h  MediaObject.cpp  MediaObject.h  SeekStack.cpp  SinkNode.cpp  SinkNode.h  VideoWidget.cpp  VideoWidget.h  WidgetNoPaintEvent.cpp
quarkplayer/: AboutWindow.cpp  AboutWindow.h  AboutWindow.ui  ActionCollection.cpp  BackgroundLogoWidget.ui  CMakeLists.txt  ComboBoxUtil.cpp  ComboBoxUtil.h  CommandLineHelp.cpp  CommandLineHelp.h  CommandLineManager.cpp  CommandLineManager.h  CommandLineParser.cpp  CommandLineParser.h  FileExtensions.cpp  FileExtensions.h  ICommandLineParser.h  IPluginManager.h  IconEngine.cpp  IconEngine.h  Languages.cpp  Languages.h  LogMessage.cpp  LogMessage.h  LogMessageHandler.cpp  LogMessageHandler.h  LogModel.cpp  LogModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MediaController.cpp  MediaController.h  MediaControllerToolBar.cpp  MediaDataWidget.cpp  MediaDataWidget.h  MockPluginManager.cpp  MockPluginManager.h  MsgHandler.cpp  MsgHandler.h  (+55 more)
quarkplayer-app/: CMakeLists.txt  fugue.qrc  main.cpp  quarkplayer.desktop  quarkplayer.qrc  quarkplayer.rc  quarkplayer.sh  quarkplayer_crystal.qrc  quarkplayer_gartoonredux.qrc  quarkplayer_null.qrc  quarkplayer_oxygen.qrc  quarkplayer_silk.qrc  quarkplayer_tango.qrc  silk.qrc
quarkplayer-plugins/: CMakeLists.txt
tkutil/: ActionCollection.h  CMakeLists.txt  CloseEventFilter.h  DropEventFilter.cpp  DropEventFilter.h  EventFilter.h  FindFiles.cpp  FindFiles.h  KeyEventFilter.cpp  LanguageChangeEventFilter.cpp  LanguageChangeEventFilter.h  MouseEventFilter.cpp  MouseEventFilter.h  Random.cpp  Random.h  TkConfig.cpp  TkConfig.h  TkFile.cpp  TkFile.h  TkFileDialog.cpp  TkFileDialog.h  TkStackedWidget.cpp  TkStackedWidget.h  TkTextBrowser.cpp  Translator.cpp  Translator.h
videoplayer/: CMakeLists.txt  main.cpp
(+1068 files in other folders)
